--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "sample_node_db",
+    "database": "webtop_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "webtop_db_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "sample_node_db",
+    "database": "webtop_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
