add user notification

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 PORT=3000
 NODE_ENV=development
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=8b58d6c3938fa4
+MAIL_PASSWORD=c70556b133f036
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="webtop@info.com"
+MAIL_FROM_NAME="WebTop"
