--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
