add db whereHas

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,21 @@
+DEV_HOST=localhost
+DEV_DB_PORT=3306
+DEV_DB_USER=root
+DEV_DB_PASS=""
+DEV_DB="webtop_db"
+
+TEST_HOST=localhost
+TEST_DB_PORT=3306
+TEST_DB_USER=root
+TEST_DB_PASS=""
+TEST_DB="webtop_db_test"
+
+PROD_HOST=localhost
+PROD_DB_PORT=3306
+PROD_DB_USER=root
+PROD_DB_PASS=""
+PROD_DB="webtop_db"
+
 PORT=3000
 NODE_ENV=development
 
